Fixed layout problems (possibly!)

--- a/styles/chlorine.less
+++ b/styles/chlorine.less
@@ -107,6 +107,7 @@ div.chlorine {
 }
 
 div.chlorine.console {
+  display: block;
   width: 100%;
   height: 100%;
   padding-bottom: 1em;
